# pentair

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODOS.md  pentair.toml  pentair.toml.example
.claude/: settings.json
.claude/skills/layering-review/: SKILL.md
docs/: 2026-06-28-pool-temp-predictor-v1.md  2026-06-29-pool-comfort-scheduler-v1.md  2026-07-01-thermal-calibrator-v1.md  api-spec.md  protocol-reference.md
docs/designs/: heat-up-estimation.md  smart-pool-platform.md
docs/experiments/spa-heat-runs/2026-03-23-100f/: config.toml  heat-estimator-store.json  run-experiment.sh  samples.jsonl
docs/experiments/spa-heat-runs/2026-03-23-90f/: config.toml  run-experiment.sh  samples.jsonl
docs/experiments/spa-heat-runs/2026-03-23-plus-5f/: config.toml  heat-estimator-store.json  run-experiment.sh  samples.jsonl  summary.json
docs/experiments/spa-heat-runs/2026-03-23-plus-5f-fixed/: config.toml  heat-estimator-store.json  run-experiment.sh  samples.jsonl  summary.json
docs/superpowers/plans/: 2026-03-18-phase2-daemon-and-android.md  2026-03-24-spa-heat-push-notifications.md  2026-03-25-google-home-matter-bridge.md  2026-07-01-thermal-calibrator-phase1-2.md
docs/superpowers/specs/: 2026-03-17-pentair-screenlogic-cli-design.md  2026-03-18-phase2-android-google-home-design.md  2026-03-24-spa-heat-push-notifications-design.md  2026-03-25-google-home-matter-bridge-design.md  2026-03-25-live-activities-design.md  2026-03-27-heating-notification-state-machine-design.md
docs/superpowers/status/: 2026-03-24-push-notifications-state.md
pentair-android/: build.gradle.kts  gradle.properties  settings.gradle.kts
pentair-android/app/: build.gradle.kts  google-services.json
pentair-android/app/src/main/: AndroidManifest.xml
pentair-android/app/src/main/res/drawable/: ic_check_circle.xml  ic_flame.xml  ic_flame_tracker.xml
pentair-android/app/src/main/res/values/: strings.xml  themes.xml
pentair-cli/: Cargo.toml
pentair-cli/src/: backend.rs  connection.rs  main.rs  output.rs
pentair-cli/src/commands/: cancel.rs  chem.rs  chlor.rs  circuit.rs  discover.rs  heat.rs  heat_plan.rs  history.rs  light.rs  mod.rs  pump.rs  raw.rs  schedule.rs  status.rs  version.rs  weather.rs
pentair-client/: Cargo.toml
pentair-client/src/: client.rs  discovery.rs  error.rs  lib.rs
pentair-client/tests/: live_read.rs  live_write.rs
pentair-daemon/: Cargo.toml
pentair-daemon/src/: adapter.rs  apns.rs  calibrator.rs  config.rs  devices.rs  fcm.rs  heat.rs  lib.rs  main.rs  network_secret.rs  scenes.rs  scheduled_heat.rs  scheduler.rs  spa_notifications.rs  state.rs  thermal.rs  weather.rs
pentair-daemon/src/api/: mod.rs  routes.rs  websocket.rs
pentair-daemon/static/: approve.html  index.html  matter.html
pentair-daemon/tests/: live_controls.rs  live_heat_estimate.rs  live_thermal_prediction.rs
pentair-ios/: Instance.xcconfig.example
pentair-ios/PentairIOS/: BonjourDiscovery.swift  ContentView.swift  GoogleService-Info.plist  Info.plist  NotificationTokenManager.swift  PentairIOSApp.swift  PoolAPI.swift  PoolAppDelegate.swift  PoolModels.swift  PoolViewModel.swift  SpaHeatAttributes.swift
pentair-ios/PentairIOS.xcodeproj/: project.pbxproj
pentair-ios/PentairIOS.xcodeproj/xcshareddata/xcschemes/: PentairIOS.xcscheme
pentair-ios/PentairIOS/Assets.xcassets/AccentColor.colorset/: Contents.json
pentair-ios/PentairIOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
pentair-ios/SpaHeatWidget/: SpaHeatLiveActivity.swift  SpaHeatWidgetBundle.swift
pentair-ios/Tests/: NotificationTokenManagerTests.swift  PoolStateMergeTests.swift
pentair-matter/: Cargo.toml
pentair-matter/src/: clusters.rs  color_control_handler.rs  config.rs  convert.rs  daemon_client.rs  groups_handler.rs  identify_handler.rs  level_control_handler.rs  lib.rs  light_modes.rs  main.rs  matter_bridge.rs  mode_select_handler.rs  pool_types.rs  state.rs  thermostat_handler.rs  thermostat_ui_handler.rs  ws_subscriber.rs
pentair-matter/tests/: chip_tool_e2e.sh  integration.rs
pentair-protocol/: Cargo.toml
pentair-protocol/src/: action.rs  codec.rs  enums.rs  equipment.rs  error.rs  lib.rs  requests.rs  responses.rs  semantic.rs  types.rs
test-fixtures/: README.md
(+37 files in other folders)
