[workspace]
members = [
    "pentair-protocol",
    "pentair-client",
    "pentair-daemon",
    "pentair-cli",
    "pentair-matter",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
