[package]
name = "pentair-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
pentair-protocol = { path = "../pentair-protocol" }
pentair-client = { path = "../pentair-client" }
clap = { version = "4", features = ["derive", "env"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
