[package]
name = "pentair-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
pentair-protocol = { path = "../pentair-protocol" }
pentair-client = { path = "../pentair-client" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
