[package]
name = "pentair-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
pentair-protocol = { path = "../pentair-protocol" }
pentair-client = { path = "../pentair-client" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
mdns-sd = "0.11"
hostname = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
